code/src/net/yeah/zhouyou/mickey/snl/antlr4/SnlcParser.java
// Generated from D:\IdeaProjects\jsnl\src\net\yeah\zhouyou\mickey\snl\antlr4\Snlc.g4 by ANTLR 4.x
package net.yeah.zhouyou.mickey.snl.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SnlcParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, TYPE=2, INTEGER=3, CHAR=4, ARRAY=5, OF=6, RECORD=7, BEGIN=8, 
		END=9, PROCEDURE=10, VAR=11, IF=12, THEN=13, ELSE=14, WHILE=15, DO=16, 
		ENDWH=17, READ=18, WRITE=19, RETURN=20, FI=21, ID=22, INTC=23, ADD=24, 
		SUB=25, MUL=26, DIV=27, EQ=28, LT=29, DOT=30, DDOT=31, AMGT=32, SEM=33, 
		COMMA=34, LBT=35, RBT=36, LSBT=37, RSBT=38, WS=39;
	public static final String[] tokenNames = {
		"<INVALID>", "'program'", "'type'", "'integer'", "'char'", "'array'", 
		"'of'", "'record'", "'begin'", "'end'", "'procedure'", "'var'", "'if'", 
		"'then'", "'else'", "'while'", "'do'", "'endwh'", "'read'", "'write'", 
		"'return'", "'fi'", "ID", "INTC", "'+'", "'-'", "'*'", "'/'", "'='", "'<'", 
		"'.'", "'..'", "':='", "';'", "','", "'('", "')'", "'['", "']'", "WS"
	};
	public static final int
		RULE_program = 0, RULE_programHead = 1, RULE_declarePart = 2, RULE_typeDecpart = 3, 
		RULE_typeDecList = 4, RULE_typeDef = 5, RULE_basicType = 6, RULE_structureType = 7, 
		RULE_arrayType = 8, RULE_recordType = 9, RULE_fieldDecList = 10, RULE_idList = 11, 
		RULE_varDecpart = 12, RULE_varDecList = 13, RULE_procDecpart = 14, RULE_procDeclare = 15, 
		RULE_paramList = 16, RULE_param = 17, RULE_programBody = 18, RULE_stmList = 19, 
		RULE_stm = 20, RULE_assignment = 21, RULE_callStm = 22, RULE_conditionalStm = 23, 
		RULE_loopStm = 24, RULE_inputStm = 25, RULE_outputStm = 26, RULE_actParamList = 27, 
		RULE_condExp = 28, RULE_exp = 29, RULE_factor = 30, RULE_variable = 31, 
		RULE_variMore = 32;
	public static final String[] ruleNames = {
		"program", "programHead", "declarePart", "typeDecpart", "typeDecList", 
		"typeDef", "basicType", "structureType", "arrayType", "recordType", "fieldDecList", 
		"idList", "varDecpart", "varDecList", "procDecpart", "procDeclare", "paramList", 
		"param", "programBody", "stmList", "stm", "assignment", "callStm", "conditionalStm", 
		"loopStm", "inputStm", "outputStm", "actParamList", "condExp", "exp", 
		"factor", "variable", "variMore"
	};

	@Override
	public String getGrammarFileName() { return "Snlc.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SnlcParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramBodyContext programBody() {
			return getRuleContext(ProgramBodyContext.class,0);
		}
		public DeclarePartContext declarePart() {
			return getRuleContext(DeclarePartContext.class,0);
		}
		public ProgramHeadContext programHead() {
			return getRuleContext(ProgramHeadContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); programHead();
			setState(67); declarePart();
			setState(69);
			_la = _input.LA(1);
			if (_la==BEGIN) {
				{
				setState(68); programBody();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeadContext extends ParserRuleContext {
		public Token programName;
		public TerminalNode ID() { return getToken(SnlcParser.ID, 0); }
		public TerminalNode PROGRAM() { return getToken(SnlcParser.PROGRAM, 0); }
		public ProgramHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHead; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitProgramHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadContext programHead() throws RecognitionException {
		ProgramHeadContext _localctx = new ProgramHeadContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHead);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(PROGRAM);
			setState(72); ((ProgramHeadContext)_localctx).programName = match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarePartContext extends ParserRuleContext {
		public VarDecpartContext varDecpart() {
			return getRuleContext(VarDecpartContext.class,0);
		}
		public TypeDecpartContext typeDecpart() {
			return getRuleContext(TypeDecpartContext.class,0);
		}
		public ProcDecpartContext procDecpart() {
			return getRuleContext(ProcDecpartContext.class,0);
		}
		public DeclarePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarePart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitDeclarePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarePartContext declarePart() throws RecognitionException {
		DeclarePartContext _localctx = new DeclarePartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarePart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_la = _input.LA(1);
			if (_la==TYPE) {
				{
				setState(74); typeDecpart();
				}
			}

			setState(78);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(77); varDecpart();
				}
			}

			setState(81);
			_la = _input.LA(1);
			if (_la==PROCEDURE) {
				{
				setState(80); procDecpart();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDecpartContext extends ParserRuleContext {
		public TypeDecListContext typeDecList() {
			return getRuleContext(TypeDecListContext.class,0);
		}
		public TerminalNode TYPE() { return getToken(SnlcParser.TYPE, 0); }
		public TypeDecpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecpart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitTypeDecpart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDecpartContext typeDecpart() throws RecognitionException {
		TypeDecpartContext _localctx = new TypeDecpartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDecpart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(TYPE);
			setState(84); typeDecList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDecListContext extends ParserRuleContext {
		public Token typeId;
		public TerminalNode ID() { return getToken(SnlcParser.ID, 0); }
		public TypeDecListContext typeDecList() {
			return getRuleContext(TypeDecListContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public TypeDecListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitTypeDecList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDecListContext typeDecList() throws RecognitionException {
		TypeDecListContext _localctx = new TypeDecListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typeDecList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); ((TypeDecListContext)_localctx).typeId = match(ID);
			setState(87); match(AMGT);
			setState(88); typeDef();
			setState(89); match(SEM);
			setState(91);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(90); typeDecList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDefContext extends ParserRuleContext {
		public StructureTypeContext structureType() {
			return getRuleContext(StructureTypeContext.class,0);
		}
		public BasicTypeContext basicType() {
			return getRuleContext(BasicTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SnlcParser.ID, 0); }
		public TypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitTypeDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDefContext typeDef() throws RecognitionException {
		TypeDefContext _localctx = new TypeDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDef);
		try {
			setState(96);
			switch (_input.LA(1)) {
			case INTEGER:
			case CHAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(93); basicType();
				}
				break;
			case ARRAY:
			case RECORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(94); structureType();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(95); match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicTypeContext extends ParserRuleContext {
		public TerminalNode CHAR() { return getToken(SnlcParser.CHAR, 0); }
		public TerminalNode INTEGER() { return getToken(SnlcParser.INTEGER, 0); }
		public BasicTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitBasicType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicTypeContext basicType() throws RecognitionException {
		BasicTypeContext _localctx = new BasicTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_basicType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==CHAR) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureTypeContext extends ParserRuleContext {
		public RecordTypeContext recordType() {
			return getRuleContext(RecordTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public StructureTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitStructureType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureTypeContext structureType() throws RecognitionException {
		StructureTypeContext _localctx = new StructureTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_structureType);
		try {
			setState(102);
			switch (_input.LA(1)) {
			case ARRAY:
				enterOuterAlt(_localctx, 1);
				{
				setState(100); arrayType();
				}
				break;
			case RECORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(101); recordType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public Token low;
		public Token top;
		public List<TerminalNode> INTC() { return getTokens(SnlcParser.INTC); }
		public TerminalNode INTC(int i) {
			return getToken(SnlcParser.INTC, i);
		}
		public BasicTypeContext basicType() {
			return getRuleContext(BasicTypeContext.class,0);
		}
		public TerminalNode OF() { return getToken(SnlcParser.OF, 0); }
		public TerminalNode ARRAY() { return getToken(SnlcParser.ARRAY, 0); }
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(ARRAY);
			setState(105); match(LSBT);
			setState(106); ((ArrayTypeContext)_localctx).low = match(INTC);
			setState(107); match(DDOT);
			setState(108); ((ArrayTypeContext)_localctx).top = match(INTC);
			setState(109); match(RSBT);
			setState(110); match(OF);
			setState(111); basicType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordTypeContext extends ParserRuleContext {
		public TerminalNode RECORD() { return getToken(SnlcParser.RECORD, 0); }
		public FieldDecListContext fieldDecList() {
			return getRuleContext(FieldDecListContext.class,0);
		}
		public TerminalNode END() { return getToken(SnlcParser.END, 0); }
		public RecordTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitRecordType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecordTypeContext recordType() throws RecognitionException {
		RecordTypeContext _localctx = new RecordTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_recordType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(RECORD);
			setState(114); fieldDecList();
			setState(115); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDecListContext extends ParserRuleContext {
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public FieldDecListContext fieldDecList() {
			return getRuleContext(FieldDecListContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public FieldDecListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitFieldDecList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDecListContext fieldDecList() throws RecognitionException {
		FieldDecListContext _localctx = new FieldDecListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fieldDecList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); typeDef();
			setState(118); idList();
			setState(119); match(SEM);
			setState(121);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << CHAR) | (1L << ARRAY) | (1L << RECORD) | (1L << ID))) != 0)) {
				{
				setState(120); fieldDecList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdListContext extends ParserRuleContext {
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public TerminalNode ID() { return getToken(SnlcParser.ID, 0); }
		public IdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitIdList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdListContext idList() throws RecognitionException {
		IdListContext _localctx = new IdListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(ID);
			setState(126);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(124); match(COMMA);
				setState(125); idList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecpartContext extends ParserRuleContext {
		public VarDecListContext varDecList() {
			return getRuleContext(VarDecListContext.class,0);
		}
		public TerminalNode VAR() { return getToken(SnlcParser.VAR, 0); }
		public VarDecpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecpart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitVarDecpart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecpartContext varDecpart() throws RecognitionException {
		VarDecpartContext _localctx = new VarDecpartContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_varDecpart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(VAR);
			setState(129); varDecList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecListContext extends ParserRuleContext {
		public VarDecListContext varDecList() {
			return getRuleContext(VarDecListContext.class,0);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public VarDecListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitVarDecList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecListContext varDecList() throws RecognitionException {
		VarDecListContext _localctx = new VarDecListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_varDecList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); typeDef();
			setState(132); idList();
			setState(133); match(SEM);
			setState(135);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << CHAR) | (1L << ARRAY) | (1L << RECORD) | (1L << ID))) != 0)) {
				{
				setState(134); varDecList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcDecpartContext extends ParserRuleContext {
		public ProcDeclareContext procDeclare() {
			return getRuleContext(ProcDeclareContext.class,0);
		}
		public ProcDecpartContext procDecpart() {
			return getRuleContext(ProcDecpartContext.class,0);
		}
		public ProcDecpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDecpart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitProcDecpart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcDecpartContext procDecpart() throws RecognitionException {
		ProcDecpartContext _localctx = new ProcDecpartContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_procDecpart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); procDeclare();
			setState(139);
			_la = _input.LA(1);
			if (_la==PROCEDURE) {
				{
				setState(138); procDecpart();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcDeclareContext extends ParserRuleContext {
		public Token procName;
		public ProgramBodyContext programBody() {
			return getRuleContext(ProgramBodyContext.class,0);
		}
		public DeclarePartContext declarePart() {
			return getRuleContext(DeclarePartContext.class,0);
		}
		public TerminalNode ID() { return getToken(SnlcParser.ID, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public TerminalNode PROCEDURE() { return getToken(SnlcParser.PROCEDURE, 0); }
		public ProcDeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDeclare; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitProcDeclare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcDeclareContext procDeclare() throws RecognitionException {
		ProcDeclareContext _localctx = new ProcDeclareContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_procDeclare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141); match(PROCEDURE);
			setState(142); ((ProcDeclareContext)_localctx).procName = match(ID);
			setState(143); match(LBT);
			setState(145);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << CHAR) | (1L << ARRAY) | (1L << RECORD) | (1L << VAR) | (1L << ID))) != 0)) {
				{
				setState(144); paramList();
				}
			}

			setState(147); match(RBT);
			setState(148); match(SEM);
			setState(149); declarePart();
			setState(150); programBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamListContext extends ParserRuleContext {
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); param();
			setState(155);
			_la = _input.LA(1);
			if (_la==SEM) {
				{
				setState(153); match(SEM);
				setState(154); paramList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(SnlcParser.VAR, 0); }
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public TypeDefContext typeDef() {
			return getRuleContext(TypeDefContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(157); match(VAR);
				}
			}

			setState(160); typeDef();
			setState(161); idList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramBodyContext extends ParserRuleContext {
		public StmListContext stmList() {
			return getRuleContext(StmListContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(SnlcParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(SnlcParser.END, 0); }
		public ProgramBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programBody; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SnlcVisitor ) return ((SnlcVisitor<? extends T>)visitor).visitProgramBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramBodyContext programBody() throws RecognitionException {
		ProgramBodyContext _localctx = new ProgramBodyContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_programBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); match(BEGIN);
			setState(164); stmList();
			setState(165); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
